<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">Wet Weather</string>

    <string name="action_settings">Settings</string>

    <!-- Label for the location preference -->
    <string name="pref_location_label">Location</string>


    <!-- Key name for storing latitude in SharedPreferences -->
    <string name="pref_latitude_key" translatable="false">latitude</string>

    <!-- Key name for storing longitude in SharedPreferences -->
    <string name="pref_longitude_key" translatable="false">longitude</string>

    <!-- Key name for storing location in SharedPreferences -->
    <string name="pref_location_key" translatable="false">location</string>

    <!-- Default postal code for location preference -->
    <string name="pref_location_default" translatable="false">Cork</string>

    <!-- Label for the temperature units preference -->
    <string name="pref_units_label">Units</string>

    <!-- Label for metric option in temperature unit preference -->
    <string name="pref_units_label_metric">Metric</string>

    <!-- Label for imperial option in temperature unit preference -->
    <string name="pref_units_label_imperial">Imperial</string>

    <!-- Key name for temperature unit preference in SharedPreferences -->
    <string name="pref_units_key" translatable="false">units</string>

    <!-- Value in SharedPreferences for metric unit option -->
    <string name="pref_units_metric" translatable="false">metric</string>

    <!-- Value in SharedPreferences for imperial unit option -->
    <string name="pref_units_imperial" translatable="false">imperial</string>

    <!-- Label for the update interval preference -->
    <string name="pref_update_interval_label">Update interval</string>

    <!-- Label for 1 hour option in update interval preference -->
    <string name="pref_update_interval_disabled">Disabled</string>

    <!-- Label for 1 hour option in update interval preference -->
    <string name="pref_update_interval_1_hour">1 hour</string>

    <!-- Label for 1 hour option in update interval preference -->
    <string name="pref_update_interval_2_hours">2 hours</string>

    <!-- Label for 1 hour option in update interval preference -->
    <string name="pref_update_interval_4_hours">4 hours</string>

    <!-- Label for 1 hour option in update interval preference -->
    <string name="pref_update_interval_6_hours">6 hours</string>

    <!-- Key name for update interval preference in SharedPreferences -->
    <string name="pref_update_interval_key" translatable="false">updateInterval</string>

    <!-- Value in SharedPreferences for update interval option -->
    <string name="pref_update_interval_value_0" translatable="false">0</string>

    <!-- Value in SharedPreferences for update interval option -->
    <string name="pref_update_interval_value_1" translatable="false">1</string>

    <!-- Value in SharedPreferences for update interval option -->
    <string name="pref_update_interval_value_2" translatable="false">2</string>

    <!-- Value in SharedPreferences for update interval option -->
    <string name="pref_update_interval_value_4" translatable="false">4</string>

    <!-- Value in SharedPreferences for update interval option -->
    <string name="pref_update_interval_value_6" translatable="false">6</string>


    <string name="pref_language_title">Language</string>
    <string name="pref_language_key" translatable="false">language</string>
    <string name="pref_language_en_label">English</string>
    <string name="pref_language_uk_label">Ukrainian</string>
    <string name="pref_language_en_value" translatable="false">en</string>
    <string name="pref_language_uk_value" translatable="false">uk</string>


    <string name="pref_weather_provider_title">Weather provider</string>
    <string name="pref_weather_provider_key" translatable="false">weather_provider</string>
    <string name="pref_weather_provider_dark_sky_label" translatable="false">Dark Sky</string>
    <string name="pref_weather_provider_open_weather_label" translatable="false">OpenWeather</string>
    <string name="pref_weather_provider_clima_cell_label" translatable="false">ClimaCell</string>
    <string name="pref_weather_provider_dark_sky_value" translatable="false">dark_sky</string>
    <string name="pref_weather_provider_open_weather_value" translatable="false">open_weather</string>
    <string name="pref_weather_provider_clima_cell_value" translatable="false">clima_cell</string>


    <string name="title_activity_detail">Details</string>

    <string name="title_activity_locations">Places</string>

    <string name="title_activity_hourly">Hourly Forecast</string>

    <string name="title_activity_alerts">Weather alerts</string>

    <string name="cloud_cover_label">Clouds</string>

    <string name="next_hour_label">Next hour</string>
    <string name="next_24_hours_label">Next 24 hours</string>
    <string name="next_7_days_label">Next 7 days</string>

    <string name="alerts_label">Weather alerts:</string>

    <string name="default_text">Please add your location.</string>


    <!-- For labelling today's forecast -->
    <string name="today">Today</string>

    <!-- For labelling tomorrow's forecast -->
    <string name="tomorrow">Tomorrow</string>

    <!-- Temperature format -->
    <string name="format_temperature" translatable="false">
        <xliff:g id="temp">%1.0f</xliff:g>\u00B0
    </string>

    <string name="wind_label">Wind</string>
    <!-- Wind in m/s -->
    <string name="format_wind_ms">
        <xliff:g id="speed">%1$1.0f</xliff:g> m/s
        <xliff:g id="direction">%2$s</xliff:g>
    </string>

    <string name="format_percip_intens">
        <xliff:g id="precip">%1$.2f</xliff:g> mm
    </string>

    <string name="format_percip_intens_graph" translatable="false">
        <xliff:g id="precip_graph">%1$.1f</xliff:g>
    </string>

    <string name="format_visibility">
        <xliff:g id="visibility">%1$.2s</xliff:g> km
    </string>

    <string name="percip_prob_label">Rain probability</string>

    <string name="percip_inten_label">Rain intensity</string>

    <string name="sunrise_label">Sunrise</string>

    <string name="sunset_label">Sunset</string>

    <string name="uvindex_label">UV index</string>

    <string name="visibility_label">Visibility</string>

    <string name="not_available_text">N/A</string>

    <string name="updated_at_text">Updated:</string>

    <string name="hourly_rain_prob_label">Rain:</string>

    <string name="cloud_details_label">Clouds</string>

    <string name="speed_ms_label">m/s</string>

    <string name="network_not_available">Network is not available!</string>

    <string name="dew_point_label">Dew point</string>

    <string name="feels_like_label">Feels like:</string>

    <string name="change_location_button_label">Change location</string>

    <string name="search_button_label">Search</string>

    <string name="moon_phase_new_label">New moon</string>
    <string name="moon_phase_waxing_crescent_label">Waxing crescent</string>
    <string name="moon_phase_first_quarter_label">First quarter</string>
    <string name="moon_phase_waxing_gibbous_label">Waxing gibbous</string>
    <string name="moon_phase_full_label">Full moon</string>
    <string name="moon_phase_waning_gibbous_label">Waning gibbous</string>
    <string name="moon_phase_last_quarter_label">Last quarter</string>
    <string name="moon_phase_waning_crescent_label">Waning crescent</string>
    <string name="moon_phase_label">Moon</string>

    <!-- Graphs strings -->
    <string name="graph_precip_description_label">Precipitation intensity</string>
    <string name="graph_temp_description_label">Temperature</string>
    <string name="graph_humidity_description_label">Humidity</string>
    <string name="graph_pressure_description_label">Pressure</string>
    <string name="day_temperature_label">Day</string>
    <string name="day_apparent_temperature_label">Day feels like</string>
    <string name="night_temperature_label">Night</string>
    <string name="night_apparent_temperature_label">Night feels like</string>
    <!-- Graphs strings end-->

    <string name="pressure_label">Pressure</string>
    <!-- Pressure format -->
    <string name="format_pressure">
        <xliff:g id="pressure">%1.0f</xliff:g> hPa
    </string>

    <string name="format_pressure_graph" translatable="false">
        <xliff:g id="pressure_graph">%1.0f</xliff:g>
    </string>

    <string name="humidity_label">Humidity</string>
    <!-- Humidity format -->
    <string name="format_percent_value" translatable="false">
        <xliff:g id="humidity">%1.0f</xliff:g>%%
    </string>

    <string name="format_wind_speed">
        <xliff:g id="speed">%1$1.0f</xliff:g> m/s
    </string>

    <string name="add_widget">Add widget</string>
    <string name="precip_label">Precipitation</string>
    <string name="unknown_weather_code">Unknown</string>
    <string name="clear_weather_code">Clear</string>
    <string name="cloudy_weather_code">Cloudy</string>
    <string name="mostly_clear_weather_code">Mostly Clear</string>
    <string name="partly_cloudy_weather_code">Partly Cloudy</string>
    <string name="mostly_cloudy_weather_code">Mostly Cloudy</string>
    <string name="fog_weather_code">Fog</string>
    <string name="light_fog_weather_code">Light Fog</string>
    <string name="light_wind_weather_code">Light Wind</string>
    <string name="wind_weather_code">Wind</string>
    <string name="strong_wind_weather_code">Strong Wind</string>
    <string name="drizle_weather_code">Drizle</string>
    <string name="rain_weather_code">Rain</string>
    <string name="light_rain_weather_code">Light Rain</string>
    <string name="heavy_rain_weather_code">Heavy Rain</string>
    <string name="snow_weather_code">Snow</string>
    <string name="flurries_weather_code">Flurries</string>
    <string name="light_snow_weather_code">Light Snow</string>
    <string name="heavy_snow_weather_code">Heavy Snow</string>
    <string name="freezing_drizle_weather_code">Freezing Drizzle</string>
    <string name="freezing_rain_weather_code">Freezing Rain</string>
    <string name="light_freezing_rain_weather_code">Light Freezing Rain</string>
    <string name="heavy_freezing_rain_weather_code">Heavy Freezing Rain</string>
    <string name="ice_pallets_weather_code">Ice Pellets</string>
    <string name="heavy_ice_pallets_weather_code">Heavy Ice Pellets</string>
    <string name="light_ice_pallets_weather_code">Light Ice Pellets</string>
    <string name="thunderstorm_weather_code">Thunderstorm</string>

</resources>
