<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent">

    <ListPreference
        android:defaultValue="@string/pref_language_en_value"
        android:entries="@array/language_options"
        android:entryValues="@array/language_values"
        android:key="@string/pref_language_key"
        android:title="@string/pref_language_title" />

    <ListPreference
        android:defaultValue="@string/pref_units_metric"
        android:entries="@array/pref_units_options"
        android:entryValues="@array/pref_units_values"
        android:key="@string/pref_units_key"
        android:title="@string/pref_units_label" />

    <ListPreference
        android:defaultValue="@string/pref_update_interval_value_0"
        android:entries="@array/update_interval_options"
        android:entryValues="@array/update_interval_values"
        android:key="@string/pref_update_interval_key"
        android:title="@string/pref_update_interval_label" />

    <ListPreference
        android:defaultValue="@string/pref_weather_provider_dark_sky_value"
        android:entries="@array/weather_provider_options"
        android:entryValues="@array/weather_provider_values"
        android:key="@string/pref_weather_provider_key"
        android:title="@string/pref_weather_provider_title" />

</PreferenceScreen>