<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/extra_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/detail_accent_pane_background"
        android:paddingBottom="@dimen/forecast_detail_vertical_padding"
        android:paddingEnd="@dimen/forecast_detail_horizontal_padding"
        android:paddingLeft="@dimen/forecast_detail_horizontal_padding"
        android:paddingRight="@dimen/forecast_detail_horizontal_padding"
        android:paddingStart="@dimen/forecast_detail_horizontal_padding"
        android:paddingTop="@dimen/forecast_detail_vertical_padding">

        <!-- This guideline divides the layout into a left and right half and is used for alignment -->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontal_middle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"/>

        <!-- Humidity label -->
        <TextView
            android:id="@+id/humidity_label"
            style="@style/DetailLabel"
            android:text="@string/humidity_label"
            app:layout_constraintBottom_toTopOf="@+id/pressure_label"
            app:layout_constraintLeft_toLeftOf="@+id/extra_details"
            app:layout_constraintTop_toTopOf="@+id/extra_details" />

        <!-- Humidity measurement -->
        <TextView
            android:id="@+id/humidity"
            style="@style/ExtraWeatherMeasurement"
            app:layout_constraintBottom_toBottomOf="@+id/humidity_label"
            app:layout_constraintLeft_toLeftOf="@+id/horizontal_middle"
            tools:text="38%"/>

        <!-- Pressure label -->
        <TextView
            android:id="@+id/pressure_label"
            style="@style/DetailLabel"
            android:text="@string/pressure_label"
            app:layout_constraintBottom_toTopOf="@+id/wind_label"
            app:layout_constraintLeft_toLeftOf="@+id/extra_details"
            app:layout_constraintTop_toBottomOf="@+id/humidity_label"/>

        <!-- Pressure measurement -->
        <TextView
            android:id="@+id/pressure"
            style="@style/ExtraWeatherMeasurement"
            app:layout_constraintBottom_toBottomOf="@+id/pressure_label"
            app:layout_constraintLeft_toLeftOf="@+id/horizontal_middle"
            tools:text="995 hPa"/>

        <!-- Wind label -->
        <TextView
            android:id="@+id/wind_label"
            style="@style/DetailLabel"
            android:text="@string/wind_label"
            app:layout_constraintBottom_toTopOf="@+id/cloud_cover_label"
            app:layout_constraintLeft_toLeftOf="@+id/extra_details"
            app:layout_constraintTop_toBottomOf="@+id/pressure_label" />

        <!-- Wind measurement -->
        <TextView
            android:id="@+id/wind_measurement"
            style="@style/ExtraWeatherMeasurement"
            app:layout_constraintBottom_toBottomOf="@+id/wind_label"
            app:layout_constraintLeft_toLeftOf="@+id/horizontal_middle"
            tools:text="4km/h NW"/>

        <!-- cloud cover label -->
        <TextView
            android:id="@+id/cloud_cover_label"
            style="@style/DetailLabel"
            android:text="@string/cloud_cover_label"
            app:layout_constraintBottom_toTopOf="@+id/percip_prob_label"
            app:layout_constraintLeft_toLeftOf="@+id/extra_details"
            app:layout_constraintTop_toBottomOf="@+id/wind_label" />

        <!-- cloud cover measurement -->
        <TextView
            android:id="@+id/cloud_cover_measurement"
            style="@style/ExtraWeatherMeasurement"
            app:layout_constraintBottom_toBottomOf="@+id/cloud_cover_label"
            app:layout_constraintLeft_toLeftOf="@+id/horizontal_middle"
            tools:text="12%"/>


        <!-- percip prob label -->
        <TextView
            android:id="@+id/percip_prob_label"
            style="@style/DetailLabel"
            android:text="@string/percip_prob_label"
            app:layout_constraintBottom_toTopOf="@+id/percip_inten_label"
            app:layout_constraintLeft_toLeftOf="@+id/extra_details"
            app:layout_constraintTop_toBottomOf="@+id/cloud_cover_label" />

        <!-- percip prob measurement -->
        <TextView
            android:id="@+id/percip_prob_measurement"
            style="@style/ExtraWeatherMeasurement"
            app:layout_constraintBottom_toBottomOf="@+id/percip_prob_label"
            app:layout_constraintLeft_toLeftOf="@+id/horizontal_middle"
            tools:text="20%"/>

        <!-- percip inten label -->
        <TextView
            android:id="@+id/percip_inten_label"
            style="@style/DetailLabel"
            android:text="@string/percip_inten_label"
            app:layout_constraintBottom_toTopOf="@+id/sunrise_label"
            app:layout_constraintLeft_toLeftOf="@+id/extra_details"
            app:layout_constraintTop_toBottomOf="@+id/percip_prob_label" />

        <!-- percip inten measurement -->
        <TextView
            android:id="@+id/percip_inten_measurement"
            style="@style/ExtraWeatherMeasurement"
            app:layout_constraintBottom_toBottomOf="@+id/percip_inten_label"
            app:layout_constraintLeft_toLeftOf="@+id/horizontal_middle"
            tools:text="0.54 mm/h"/>

        <!-- sunrise label -->
        <TextView
            android:id="@+id/sunrise_label"
            style="@style/DetailLabel"
            android:text="@string/sunrise_label"
            app:layout_constraintBottom_toTopOf="@+id/sunset_label"
            app:layout_constraintLeft_toLeftOf="@+id/extra_details"
            app:layout_constraintTop_toBottomOf="@+id/percip_inten_label" />

        <!-- sunrise measurement -->
        <TextView
            android:id="@+id/sunrise_measurement"
            style="@style/ExtraWeatherMeasurement"
            app:layout_constraintBottom_toBottomOf="@+id/sunrise_label"
            app:layout_constraintLeft_toLeftOf="@+id/horizontal_middle"
            tools:text="7:00"/>

        <!-- sunrise label -->
        <TextView
            android:id="@+id/sunset_label"
            style="@style/DetailLabel"
            android:text="@string/sunset_label"
            app:layout_constraintBottom_toTopOf="@+id/uvindex_label"
            app:layout_constraintLeft_toLeftOf="@+id/extra_details"
            app:layout_constraintTop_toBottomOf="@+id/sunrise_label" />

        <!-- sunrise measurement -->
        <TextView
            android:id="@+id/sunset_measurement"
            style="@style/ExtraWeatherMeasurement"
            app:layout_constraintBottom_toBottomOf="@+id/sunset_label"
            app:layout_constraintLeft_toLeftOf="@+id/horizontal_middle"
            tools:text="22:00"/>

        <!-- uvindex label -->
        <TextView
            android:id="@+id/uvindex_label"
            style="@style/DetailLabel"
            android:text="@string/uvindex_label"
            app:layout_constraintBottom_toTopOf="@+id/visibility_label"
            app:layout_constraintLeft_toLeftOf="@+id/extra_details"
            app:layout_constraintTop_toBottomOf="@+id/sunset_label" />

        <!-- uvindex measurement -->
        <TextView
            android:id="@+id/uvindex_measurement"
            style="@style/ExtraWeatherMeasurement"
            app:layout_constraintBottom_toBottomOf="@+id/uvindex_label"
            app:layout_constraintLeft_toLeftOf="@+id/horizontal_middle"
            tools:text="2"/>

        <!-- visibility label -->
        <TextView
            android:id="@+id/visibility_label"
            style="@style/DetailLabel"
            android:text="@string/visibility_label"
            app:layout_constraintBottom_toBottomOf="@+id/extra_details"
            app:layout_constraintLeft_toLeftOf="@+id/extra_details"
            app:layout_constraintTop_toBottomOf="@+id/uvindex_label" />

        <!-- visibility measurement -->
        <TextView
            android:id="@+id/visibility_measurement"
            style="@style/ExtraWeatherMeasurement"
            app:layout_constraintBottom_toBottomOf="@+id/visibility_label"
            app:layout_constraintLeft_toLeftOf="@+id/horizontal_middle"
            tools:text="10 km"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>