<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/list_item_padding_horizontal"
        android:paddingTop="@dimen/list_item_padding_horizontal"
        android:paddingRight="@dimen/list_item_padding_horizontal"
        android:paddingBottom="@dimen/list_item_padding_horizontal"
        tools:context=".GraphsActivity">

        <TextView
            android:id="@+id/tempGraphDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/graph_temp_description_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textStyle="bold" />

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/tempGraph"
            android:layout_width="match_parent"
            android:layout_height="200dp" />

        <TextView
            android:id="@+id/precipGraphDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="@dimen/list_item_padding_horizontal"
            android:text="@string/graph_precip_description_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textStyle="bold" />

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/precipGraph"
            android:layout_width="match_parent"
            android:layout_height="200dp" />

        <TextView
            android:id="@+id/pressureGraphDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="@dimen/list_item_padding_horizontal"
            android:text="@string/graph_pressure_description_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textStyle="bold" />

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/pressureGraph"
            android:layout_width="match_parent"
            android:layout_height="200dp" />

        <TextView
            android:id="@+id/humidityGraphDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="@dimen/list_item_padding_horizontal"
            android:text="@string/graph_humidity_description_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textStyle="bold" />

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/humidityGraph"
            android:layout_width="match_parent"
            android:layout_height="200dp" />

    </LinearLayout>
</ScrollView>